--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <br><br><br><br><br><br><br><br>
 <h1 align="center">VINHARIA AGNELLO</h1>
-<h3 align="center" >Projeto para o alistamento de vinhos da Vinharia AgneLlo</h3>
+<h3 align="center" >Projeto para o alistamento de vinhos da Vinharia Agnello</h3>
 
 
 
