--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinharia Agnello</title>
+    <title>Vinheira Agnello</title>
 
 
 
@@ -22,8 +22,8 @@
 
 
 <br><br><br><br><br><br><br><br>
-<h1 align="center">VINHARIA AGNELLO</h1>
-<h3 align="center" >Projeto para o alistamento de vinhos da Vinharia Agnello</h3>
+<h1 align="center">VINHEIRA AGNELLO</h1>
+<h3 align="center" >Projeto para o alistamento de vinhos da Vinheira Agnello</h3>
 
 
 
